--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 						<img class="slider__btn2" src="img/svg/main-icons/Right.svg" alt="#">
 					</div>
 					<div class="test__blcok hidden">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aliquid facere fugiat exercitationem totam, itaque ex! Vitae quisquam accusamus soluta, quod libero officiis praesentium reprehenderit labore, assumenda, ratione hic unde!</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aliquid facere fugiat exercitationem totam, itaque ex! Vitae quisquam accusamus soluta, quod libero officiis praesentium reprehenderit labore.</p>
 					</div>
 					<div class="Main__sets hidden" >
 						<div class="sets__container">
