--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<img src="img/Svg/main-icons/watch.svg" width="20px" height="20px" alt="">
 							<p>работаем с 10:00 до 00:00</p>
 						</div>
-						<img width="40px" src="img/Svg/main-icons/search.svg" alt="">
+						<img height="40" width="40px" src="img/Svg/main-icons/search.svg" alt="">
 					</div>
 				</div>
 				<div class="Main__container">
