chenged button-slider

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						</div>
 					</div>
 					<div class="Main__slider2 ">
-						<img class="slider__btn1"  src="img/svg/main-icons/Left.svg" alt="#">  
+						<img class="slider__btn1"  height="60px"  src="img/png/main/Left.png" alt="#">  
 						<div class="slider-wrapper2">
 							
 							<div class="slider__container2">
@@ -247,7 +247,7 @@
 							</div>
 							
 						</div>
-						<img class="slider__btn2" src="img/svg/main-icons/Right.svg" alt="#">
+						<img class="slider__btn2" height="60px" src="img/png/main/Right.png" alt="#">
 					</div>
 					<div class="test__blcok hidden">
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aliquid facere fugiat exercitationem totam, itaque ex! Vitae quisquam accusamus soluta, quod libero officiis praesentium reprehenderit labore.</p>
