--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					</div>
 					<div class="Main__slider2 ">
 						<img class="slider__btn1"  height="60px"  src="img/png/main/Left.png" alt="#">  
-						<div class="slider-wrapper2">							
+						<div class="slider-wrapper2">						
 							<div class="slider__container2">
 								<div class="slider__track2">
 									<div class="slider2">
@@ -171,73 +171,73 @@
 									</div>
 									<div class="slider2">
 										<div class="slider__element element">
-											<img class="element__img" src="img/png/main/solomon-set.png" alt="">
-											<h2 class="element__title">Саломон сет</h2>
-											<p class="element__text">1050 грамм, 30 кусочков</p>
+											<img class="element__img" src="img/png/main/Set6.png" alt="">
+											<h2 class="element__title">Сет "6 Филадельфий"</h2>
+											<p class="element__text">1320 грамм, 46 кусочков</p>
 											<hr class="element__line">
 											<div class="element__footer">
-												<p class="element__price">1500 СОМ</p>
-												<button class="element__button">Хочу!</button>
+												<p class="element__price">1559 СОМ</p>
+												<button data-id="set6" class="element__button">Хочу!</button>
 											</div>
 										</div>
 									</div>
 									<div class="slider2">
 										<div class="slider__element element">
-											<img class="element__img" src="img/png/main/Phyladelfia.png" alt="">
-											<h2 class="element__title">Филадельфия и лосось сет</h2>
-											<p class="element__text">1260 грамм, 36 кусочков</p>
+											<img class="element__img" src="img/png/main/topoviyset.png" alt="">
+											<h2 class="element__title">Топовый сет</h2>
+											<p class="element__text">1020 грамм, 40 кусочков</p>
 											<hr class="element__line">
 											<div class="element__footer">
-												<p class="element__price">1150 СОМ</p>
-												<button class="element__button">Хочу!</button>
+												<p class="element__price">1519 СОМ</p>
+												<button data-id="topoviyset" class="element__button">Хочу!</button>
 											</div>
 										</div>
 									</div>
 									<div class="slider2">
 										<div class="slider__element element">
-											<img class="element__img" src="img/png/main/BigPhyladelfia.png" alt="">
-											<h2 class="element__title">Самая большая Филадельфия</h2>
-											<p class="element__text">2050 грамм, 45 кусочков</p>
+											<img class="element__img" src="img/png/main/Kamikadze.png" alt="">
+											<h2 class="element__title">Камикадзе сет</h2>
+											<p class="element__text">1200 грамм, 52 кусочков</p>
 											<hr class="element__line">
 											<div class="element__footer">
-												<p class="element__price">2100 СОМ</p>
-												<button class="element__button">Хочу!</button>
+												<p class="element__price">1469 СОМ</p>
+												<button data-id="Kamikadze" class="element__button">Хочу!</button>
 											</div>
 										</div>
 									</div>
 									<div class="slider2">
 										<div class="slider__element element">
-											<img class="element__img" src="img/png/main/solomon-set.png" alt="">
-											<h2 class="element__title">Саломон сет</h2>
-											<p class="element__text">1050 грамм, 30 кусочков</p>
+											<img class="element__img" src="img/png/main/Set4.png" alt="">
+											<h2 class="element__title">Сет "4 Филадельфии"</h2>
+											<p class="element__text">1100 грамм, 32 кусочков</p>
 											<hr class="element__line">
 											<div class="element__footer">
-												<p class="element__price">1500 СОМ</p>
-												<button class="element__button">Хочу!</button>
+												<p class="element__price">1559 СОМ</p>
+												<button data-id="Set4" class="element__button">Хочу!</button>
 											</div>
 										</div>
 									</div>
 									<div class="slider2">
 										<div class="slider__element element">
-											<img class="element__img" src="img/png/main/Phyladelfia.png" alt="">
-											<h2 class="element__title">Филадельфия и лосось сет</h2>
-											<p class="element__text">1260 грамм, 36 кусочков</p>
+											<img class="element__img" src="img/png/main/Love.png" alt="">
+											<h2 class="element__title">Филадельфия LOVE сет</h2>
+											<p class="element__text">1000 грамм, 40 кусочков</p>
 											<hr class="element__line">
 											<div class="element__footer">
-												<p class="element__price">1150 СОМ</p>
-												<button class="element__button">Хочу!</button>
+												<p class="element__price">1479 СОМ</p>
+												<button data-id="Love" class="element__button">Хочу!</button>
 											</div>
 										</div>
 									</div>
 									<div class="slider2">
 										<div class="slider__element element">
-											<img class="element__img" src="img/png/main/BigPhyladelfia.png" alt="">
-											<h2 class="element__title">Самая большая Филадельфия</h2>
-											<p class="element__text">2050 грамм, 45 кусочков</p>
+											<img class="element__img" src="img/png/main/Yakudza.png" alt="">
+											<h2 class="element__title">Якудза сет</h2>
+											<p class="element__text">1270 грамм, 50 кусочков</p>
 											<hr class="element__line">
 											<div class="element__footer">
-												<p class="element__price">2100 СОМ</p>
-												<button class="element__button">Хочу!</button>
+												<p class="element__price">1499 СОМ</p>
+												<button data-id="Yakudza" class="element__button">Хочу!</button>
 											</div>
 										</div>
 									</div>
