--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<link rel="icon" width="16px" height="16px" href="img/Svg/logo.png">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/> -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/adaptive.css">
@@ -18,7 +19,7 @@
 					<hr class="Nav__line">
 					<nav class="Navigation__menu menu">
 						<ul class="menu__list">
-							<li class="menu__item1"><p>Пицца</p> </li>
+							<li class="menu__item1"><p>Пица</p> </li>
 							<li class="menu__item2"><p>Сеты</p> </li>
 							<li class="menu__item3"><p>WOK</p></li>
 							<li class="menu__item4"><p>Роллы</p></li>
